[package]
name = "immense"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
nalgebra = "0.16.8"
failure = "0.1.3"
auto_from = "0.1.0"
failure_derive = "0.1.3"
palette = "0.4.1"
genmesh = "0.6.2"
id-arena = "1.0.0"

[dev-dependencies]
rand = "0.5.5"
