[package]
name = "immense"
description = "A library for building 3D structures with simple composable rules."
homepage = "https://github.com/turnage/immense"
readme = "readme.md"
license = "Apache-2.0"
version = "0.1.4"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
nalgebra = "0.16.8"
failure = "0.1.3"
auto_from = "0.1.0"
failure_derive = "0.1.3"
palette = "0.4.1"
genmesh = "0.6.2"

[dev-dependencies]
rand = "0.6"
hex = "0.3"
itertools = "0.7"
noise = "0.5.1"
